@@ -1,0 +1,4 @@
+1. [x] Clean
+2. [x] Prep
+3. [ ] Cook
+4. [ ] Serve
